--- a/employee-zuul-service.properties
+++ b/employee-zuul-service.properties
@@ -1,2 +1,2 @@
-zuul.routes.employee.path=/api/employees/**
-zuul.routes.employee.stripPrefix=false
+spring.routes.employee.path=/api/employees/**
+spring.routes.employee.stripPrefix=false
