--- a/employee-zuul-service.properties
+++ b/employee-zuul-service.properties
@@ -1,2 +1,2 @@
-spring.routes.employee.path=/api/employees/**
-spring.routes.employee.stripPrefix=false
+zuul.routes.employee.path=/apii/employees/**
+zuul.routes.employee.stripPrefix=false
