--- a/client-A.properties
+++ b/client-A.properties
@@ -1,4 +1,4 @@
-hello.message=Hello from Client A updated~~
+hello.message=Hello from Client A updated
 spring.cloud.config.server.accept-empty=true
 spring.cloud.config.server.git.uri=https://github.com/yshcoffee/spring-cloud-config-repo
 spring.cloud.config.server.git.skipSslValidation=true
